			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: error handling if alias(Alias) option is used in thread_create/3
    with an already used thread or queue name.  Part of Bug#28, Mike Elston.

  * MODIFIED: succ/2 now only handles natural (>= 0) numbers.  Compatibility.
    See discussion in the mailing list (Richard O'Keefe):
    http://www.swi.psy.uva.nl/projects/SWI-Prolog/mailinglist/archive/2833.html

  * ADDED: library(url): is_global_url/1

  * ADDED/FIXED: Various problems and enhancements to check/0 reporting
    undefined predicates.  Moved make/0 to library(make) and added a
    call to list_undefined/0 to report on undefined predicates after
    completing the make.

  * FIXED: features not available in some port are not reported with the
    exception not_implemented(Category, Description).  Lourens van der Meij.

  * FIXED: Bug #25: compilation on Solaris 8

  * ADDED: op(1150, fx, meta_predicate) to avoid syntax errors if library
    quintus is not loaded explcitely.

VERSION 5.1.8 (Feb 24, 2003)
============================

  * FIXED: Bug #23: profiler on Windows platform crashed.  Holger Kanwischer.

  * DOC: Bug #24: Rearranged description of Prolog flags to be alphabetical
    and added missing documentation.  Holger Kanwischer.

  * ADDED: flag toplevel_print_anon to hide variables starting with an _
    After comments from Attila Csenki.

  * ADDED: pthread_setconcurrency/2 to query/set thread concurrency.

  * FIXED: Alignment problems in message_queue_create/1.

  * FIXED: testing for gcc -pthread in configure.

  * FIXED: Many PL_cleanup() problems, notably related to thread-management.

  * FIXED: compiling pl-atom.c for single-threaded operatation (Barry J Evans).

  * FIXED: exitPrologThreads() counting problem.
