@@ -7,6 +7,9 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * PORT: Added #define _GNU_SOURCE 1 into pl-thread.c to compile without
+    warnings on glibc based systems.
+
   * FIXED: error handling if alias(Alias) option is used in thread_create/3
     with an already used thread or queue name.  Part of Bug#28, Mike Elston.
 
